--- a/Part0/style.css
+++ b/Part0/style.css
@@ -4,6 +4,7 @@ body {
 
 div {
     width: 600px;
+    margin: 0 auto;
     background-color: whitesmoke;
     padding: 0 30px 30px 30px;
     border: 5px solid tan;
