--- a/Part1/feedbackApp/src/index.css
+++ b/Part1/feedbackApp/src/index.css
@@ -4,10 +4,5 @@ button {
     border: 1px solid gray;
 }
 
-button:focus {
-    outline: none
-}
-
-p {
-    margin: 2px;
-}
+button:focus {outline: none}
+p {margin: 2px;}
